force-app/main/default/objects/Account_Payable_Clone__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Budget__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>BT Payable Invoices (AP)</relationshipLabel>
    <relationshipName>Invoices_AP1</relationshipName>
    <type>Lookup</type>
</CustomField>