force-app/main/default/objects/Account_Payable_Clone__c/fields/Payment_Application_G702__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application_G702__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Application - G702</label>
    <referenceTo>SOV_Payment_Application__c</referenceTo>
    <relationshipName>Invoices_AP</relationshipName>
    <type>Lookup</type>
</CustomField>