force-app/main/default/objects/Account_Payable_Clone__c/fields/SubTotal_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_with_Tax__c</fullName>
    <inlineHelpText>This is the rollup of the Total of of the Invoice Lines (AP) record.</inlineHelpText>
    <label>SubTotal</label>
    <summarizedField>Account_Payable_Item_Clone__c.Total_Amount_With_Tax__c</summarizedField>
    <summaryForeignKey>Account_Payable_Item_Clone__c.Account_Payable_Clone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>