force-app/main/default/objects/Account_Payable_Clone__c/fields/Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Time_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Card</label>
    <referenceTo>Time_Cards__c</referenceTo>
    <relationshipName>Invoices_AP</relationshipName>
    <type>Lookup</type>
</CustomField>