force-app/main/default/objects/Account_Payable_Clone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Total__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>